--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -11,7 +11,7 @@
     <table>
       <tr class="first-r">
         <td class="status-label">
-          <%= image_tag("icon-white.svg", alt: "IGDB logo",class: "igdb-logo", draggable: "false", width: 30)%>
+          <%= image_tag("igdb_white.svg", alt: "IGDB logo",class: "igdb-logo", draggable: "false", width: 30)%>
           IGDB API Status:
           <td id="status" class="values"><%= content_tag(:span, nil, "uk-icon" => "#{icon}") %></td>
         </tr>
