--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,28 +1,33 @@
 <%= form_for(@user, url: eval(path), remote: true) do |f| %>
-
-<div id="signup_errors">
-  <p id="stupid"></p>
+<div class="why">
+  <hr class="uk-divider-vertical md-divider">
+  <p>In a second, you'll be ready to search games, create collections, get your lent out games back or deal with your pile of shame.</p>
+  <p id="emot-happy">\(^o^)/</p>
 </div>
 
+<div class="input">
+  <p><%= image_tag('mail.svg', alt: 'mail logo', id: 'mail-icon', draggable: 'false')%><%= f.email_field :email, class: 'uk-input uk-form-width-medium', placeholder: 'Email address' %></p>
+</div>
 
-<div class="uk-margin">
-  <%= f.label :name %>
-  <%= f.text_field :name, class: 'uk-input uk-form-width-medium',
-  autofocus: "true" %>
+
+<div class="input">
+  <p class="password"><%= image_tag('key.svg', alt: 'password logo, key', id: 'key-icon', draggable: 'false')%><%= f.password_field :password, id: 'password', class: 'password uk-input uk-form-width-medium', placeholder: 'Password' %>
+  <button class="uk-button unmask" type="button"></button></p>
+  <p id="password-min">6 characters minimum</p>
 </div>
-<div class="uk-margin">
-  <%= f.label :email %>
-  <%= f.email_field :email, class: 'uk-input uk-form-width-medium' %>
+
+    <div class="rem-me">
+      <label><%= f.check_box(:rem_me, checked: true, class: "uk-checkbox search-checkbox") %><span class="rem-me">Keep me logged in</span></label>
+    </div>
+  </div>
+
+
+<div class="submit">
+  <%= f.submit yield(:button_text),
+  class: "uk-button uk-button-default create-button" %>
+  <div class="agree">By clicking the "Create" button you agree to
+    <%= link_to 'Terms of Use', root_url, class: 'uk-link-muted' %> and
+    <%= link_to 'Privacy Policy', root_url, class: 'uk-link-muted' %>.
+  </div>
 </div>
-<div class="uk-margin">
-  <%= f.label :password %>
-  <%= f.password_field :password, class: 'uk-input uk-form-width-medium' %>
-</div>
-<div class="uk-margin">
-  <%= f.label :password_confirmation, 'Confirmation:' %>
-  <%= f.password_field :password_confirmation,
-   class: 'uk-input uk-form-width-medium' %>
-</div>
-<%= f.submit yield(:button_text),
- class: "uk-button uk-button-default md-button" %>
 <% end %>
