--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -1,4 +1,3 @@
-<% provide(:title, 'sign up') %>
-<% provide(:button_text, 'Create account') %>
+<% provide(:button_text, 'Create') %>
 <%= render 'form', path: 'signup_path' %>
 
