--- a/app/views/users/_form_olds.html.erb
+++ b/app/views/users/_form_olds.html.erb
@@ -1,14 +1,7 @@
 <%= form_for(@user, url: eval(path), remote: true) do |f| %>
 <div class="why">
   <hr class="uk-divider-vertical md-divider">
-  <p><span class="head">In a minute,</span> you'll be ready to:</p>
-  <ul>
-   <li>search games</li>
-   <li>create collections</li>
-    <li>get your lent out games back</li>
-     <li>deal with your pile of shame.</li>
-
-  </ul>
+  <p>In a second, you'll be ready to search games, create collections, get your lent out games back or deal with your pile of shame.</p>
   <p id="emot-happy">\(^o^)/</p>
 </div>
 <div class="input">
