--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,11 +4,12 @@
     <p>If so, why not to maintain your collection
     with this free app?</p>
     <p uk-margin>
-      <a class="uk-button uk-button-default md-button" href="#">Sign in</a>
-      <%= link_to "Sign up", signup_url, class: "uk-button uk-button-default md-button" %>
+    <%= link_to 'Sign In', signin_path,  {:remote => true, "uk-toggle" => "target: #signin-modal", class: 'uk-button uk-button-default md-button'}  %>
+    <%= link_to 'Sign Up', signup_path,  {:remote => true, "uk-toggle" => "target: #signup-modal", class: 'uk-button uk-button-default md-button'}  %>
     </p>
-    <%= link_to 'Sign up modal', signup_path,  {:remote => true, "uk-toggle" => "target: #modal-center", class: 'uk-button uk-button-default md-button'}  %>
-    <div id="modal-center" class="uk-flex-top" uk-modal="bg-close: false">
+
+
+    <div id="signup-modal" class="uk-flex-top" uk-modal>
       <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
         <button class="uk-modal-close-default" type="button" uk-close></button>
         <div class="modal-header">
@@ -18,17 +19,24 @@
         <div class="modal-content"></div>
       </div>
     </div>
+
+    <div id="signin-modal" class="uk-flex-top" uk-modal>
+      <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
+        <button class="uk-modal-close-default" type="button" uk-close></button>
+        <div class="modal-header">
+          <p class="header"><span class="signup-title">Log in </span><span><%= image_tag('lock_open.svg', alt: 'account logo, lock', class: 'lock-icon', draggable: 'false', width: 30)%></span></p>
+          <p class="have-account">Don't have an account? <%= link_to 'Sign Up', root_url, class: 'uk-link-muted' %> </p>
+        </div>
+        <div class="modal-content"></div>
+      </div>
+    </div>
+
+
+
+
+
   </div>
-  <div class="uk-width-auto keep">
-    <h3>Keep track of your games!</h3>
-    <p>Bad things can happen to them if you forget about them.</p>
-    <p>They can:</p>
-    <ul>
-      <li>be eaten by a dog</li>
-      <li>be sold for candy by younger brother </li>
-      <li>be lost in your garage or cellar</li>
-      <li>runaway from home </li>
-      <li>be kept hostage in your friend's house</li>
-    </ul>
-  </div>
-</div>
+
+
+
+
