--- a/app/views/static_pages/_search_bar.html.erb
+++ b/app/views/static_pages/_search_bar.html.erb
@@ -57,7 +57,7 @@
         <label class="options-labels"><%= f.check_box(:expansion, checked: "checked", class: "uk-checkbox") %><span>Expansions</span></label>
         <label class="options-labels"><%= f.check_box(:bundle, checked: "checked", class: "uk-checkbox") %><span>Bundles</span></label>
         <label class="options-labels"><%= f.check_box(:standalone, checked: "checked", class: "uk-checkbox") %><span>Standalone expansions</span></label>
-        <label class="options-labels"><%= f.check_box(:erotic, checked: "unchecked", class: "uk-checkbox") %><span>Erotic games</span></label>
+        <label class="options-labels"><%= f.check_box(:erotic, checked: "checked", class: "uk-checkbox") %><span>Erotic games</span></label>
       </div>
       <div class="search-tip">
         <a class="uk-link-muted" uk-toggle="target: #examples; animation: uk-animation-fade">You can use * for wildcard search.
