--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,6 @@ $navbar_height: 5rem;
 
 //Colors:
 $background: #dddddd;
-
 // #E9E7E7
 $accent: #75C7AF;
 $accent_darker: #49AB8A;
@@ -949,13 +948,18 @@ p.header {
     }
 }
 
+.ex-link {
+    width: 30px;
+    height: 30px;
+}
+
 .metacritic:hover svg {
     fill: #c9c9c9;
 }
 
 .google svg{
     max-width: unset;
-    width: 26px;
+    width: 24px;
 }
 
 // Screenshots Dot Nav- - - - - - - - - - - - - - - - - - - - - - - - - - - - //
@@ -988,24 +992,22 @@ p.header {
     display: inline;
 }
 
+
+.md-scrnav {
+    width: 40px;
+    height: 40px;
+    background: url("img.svg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+}
+
 // Show more summary  - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
 
 .more {
     display: none;
 }
-
-// Variant 1:
-// .ms-b {
-//     float: right;
-//     width: 20px;
-//     padding-bottom: 20px;
-// }
-
-// .md-slideshow {
-//     clear: both;
-// }
-
-// Variant 2:
 
 span.dots {
     white-space: nowrap;
@@ -1022,28 +1024,15 @@ span.dots {
 }
 
 // Slideshow border - - - - - - - - - - - - - - - - - - - - - - - - - - - - - //
-// Variant 1
-//$slideshow: #0a0a0a;
-// Variant 2
 $slideshow: #393939;
 
 .uk-position-relative.uk-slideshow {
-    // Variant 1
-    // background: $slideshow;
-    // border: 4px solid $slideshow;
-    // border-radius: 5px;
-
-    // Variant 2
     background: $slideshow;
     border-radius: 5px;
     padding-bottom: 3px;
 }
 
 ul.uk-slideshow-items {
-    // Variant 1
-    // border-radius: 3px;
-
-    // Variant 2
     border-radius: 3px 3px 0px 0px;
     box-shadow: 0px 10px 10px -8px #00000030;
 }
