--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,5 +1,6 @@
 <% flash.each do |name, msg| %>
-<div class='alert alert-<%= "#{name}" %>' role="alert">
-  <a href="#" class="close" data-dismiss="alert">&#215;</a>
-  <%= msg %>
-  <% end %>
+<div class='uk-alert-<%= "#{name}" %>' role="alert" uk-alert>
+  <a class="uk-alert-close" uk-close></a>
+  <p><%= msg %></p>
+</div>
+<% end %>
