--- a/app/views/static_pages/_logged.html.erb
+++ b/app/views/static_pages/_logged.html.erb
@@ -4,12 +4,29 @@
 
 <ul>
 <% current_user.collections.each do |collection| %>
-  <li><%= collection.name %> (<%= collection.default ? 'default' : 'custom' %>)
+  <li>
+  <%= collection.custom_name || collection.name %>
+  (<%= collection.default ? 'default' : 'custom' %>)
+  | <%= link_to 'Edit Name', edit_collection_url(collection) %>
+  | <%= link_to 'Delete', collection, method: :delete, data: { confirm: "You sure?"}  %>
   </li>
 <% end %>
 </ul>
 
 
+
+<% current_user.collections.each do |collection| %>
+  <h3><%= collection.custom_name || collection.name %>:</h3>
+  <ul>
+  <% collection.games.each do |game| %>
+    <li><%= game.name %> | <%= game.igdb_id %></li>
+  <% end %>
+  </ul>
+<% end %>
+
+
+
+<%= link_to 'Create new collection', new_collection_url %>
 
 <p><%= link_to "Log out", logout_path, method: :delete %></p>
 <p><%= link_to "Add games", search_path%></p>
