--- a/app/views/collections/_form.html.erb
+++ b/app/views/collections/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @collection do |f| %>
   <%= f.text_field :custom_name, class: 'form-control' %>
   <%= f.hidden_field(:default, :value => false) if @collection.new_record? %>
+  <label><%= f.radio_button(:needs_platform, true) %>Adding games require you to choose platform</label>
   <%= f.submit((@collection.new_record? ? 'Create' : 'Update'), class: "btn btn-primary") %>
 <% end %>
